Verify F3548 DSS requirements

--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -127,6 +127,7 @@ v1:
                   - astm.f3411.v22a.display_provider#Operator Position transmitter
                   - astm.f3411.v22a.dss_provider
                   - astm.f3548.v21.scd#Automated verification
+                  - astm.f3548.v21.dss_provider
               - requirements:
                   - uspace.article8.MSLAltitude
         participant_requirements:
