--- a/monitoring/uss_qualifier/configurations/dev/dss_probing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/dss_probing.yaml
@@ -7,13 +7,16 @@ v1:
         kentland_problematically_big_area: { $ref: 'library/resources.yaml#/kentland_problematically_big_area' }
 
         utm_auth: { $ref: 'library/environment.yaml#/utm_auth' }
+        second_utm_auth: {$ref: 'library/environment.yaml#/second_utm_auth'}
         utm_client_identity: { $ref: 'library/resources.yaml#/utm_client_identity' }
         id_generator: { $ref: 'library/resources.yaml#/id_generator' }
         scd_dss_instances: { $ref: 'library/environment.yaml#/scd_dss_instances' }
         netrid_dss_instances_v22a: { $ref: 'library/environment.yaml#/netrid_dss_instances_v22a' }
         netrid_dss_instances_v19: { $ref: 'library/environment.yaml#/netrid_dss_instances_v19' }
+        che_non_conflicting_flights: {$ref: 'library/resources.yaml#/che_non_conflicting_flights'}
     non_baseline_inputs:
       - v1.test_run.resources.resource_declarations.utm_auth
+      - v1.test_run.resources.resource_declarations.second_utm_auth
       - v1.test_run.resources.resource_declarations.scd_dss_instances
       - v1.test_run.resources.resource_declarations.netrid_dss_instances_v22a
       - v1.test_run.resources.resource_declarations.netrid_dss_instances_v19
@@ -23,10 +26,13 @@ v1:
         resources:
           f3411v19_dss_instances: netrid_dss_instances_v19
           f3411v22a_dss_instances: netrid_dss_instances_v22a
+          f3548v21_dss_instances: scd_dss_instances
           utm_client_identity: utm_client_identity
           id_generator: id_generator
           service_area: kentland_service_area
           problematically_big_area: kentland_problematically_big_area
+          second_utm_auth: second_utm_auth
+          flight_intents: che_non_conflicting_flights
     execution:
       stop_fast: true
   artifacts:
@@ -41,6 +47,7 @@ v1:
               - requirement_sets:
                   - astm.f3411.v22a.dss_provider
                   - astm.f3411.v19.dss_provider
+                  - astm.f3548.v21.dss_provider
         participant_requirements:
           uss1: all_astm_dss_requirements
           uss2: all_astm_dss_requirements
