--- a/schemas/monitoring/uss_qualifier/configurations/configuration/ExecutionConfiguration.json
+++ b/schemas/monitoring/uss_qualifier/configurations/configuration/ExecutionConfiguration.json
@@ -33,6 +33,13 @@
         "boolean",
         "null"
       ]
+    },
+    "stop_when_resource_not_created": {
+      "description": "If true, stop test execution if one of the resources cannot be created.  Otherwise, resources that cannot be created due to missing prerequisites are simply treated as omitted.",
+      "type": [
+        "boolean",
+        "null"
+      ]
     }
   },
   "type": "object"
