--- a/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
@@ -5,7 +5,7 @@ resources:
   invalid_flight_auth_flights: resources.flight_planning.FlightIntentsResource
   invalid_flight_intents: resources.flight_planning.FlightIntentsResource
   non_conflicting_flights: resources.flight_planning.FlightIntentsResource
-  flight_planners: resources.flight_planning.FlightPlannersResource
+  flight_planners: resources.flight_planning.FlightPlannersResource?
   mock_uss: resources.interuss.mock_uss.client.MockUSSResource?
   dss: resources.astm.f3548.v21.DSSInstanceResource
   dss_instances: resources.astm.f3548.v21.DSSInstancesResource?
@@ -19,7 +19,7 @@ actions:
       priority_preemption_flights: priority_preemption_flights
       invalid_flight_intents: invalid_flight_intents
       non_conflicting_flights: non_conflicting_flights
-      flight_planners: flight_planners
+      flight_planners: flight_planners?
       mock_uss: mock_uss
       dss: dss
       dss_instances: dss_instances
