--- a/monitoring/uss_qualifier/suites/uspace/network_identification.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/network_identification.yaml
@@ -1,10 +1,10 @@
 name: U-Space network identification
 resources:
   flights_data: resources.netrid.FlightDataResource
-  service_providers: resources.netrid.NetRIDServiceProviders
+  service_providers: resources.netrid.NetRIDServiceProviders?
   observers: resources.netrid.NetRIDObserversResource
   evaluation_configuration: resources.netrid.EvaluationConfigurationResource
-  dss_instances: resources.astm.f3411.DSSInstancesResource
+  dss_instances: resources.astm.f3411.DSSInstancesResource?
   utm_client_identity: resources.communications.ClientIdentityResource
   id_generator: resources.interuss.IDGeneratorResource
   service_area: resources.netrid.ServiceAreaResource
@@ -14,10 +14,10 @@ actions:
     suite_type: suites.astm.netrid.f3411_22a
     resources:
       flights_data: flights_data
-      service_providers: service_providers
+      service_providers: service_providers?
       observers: observers
       evaluation_configuration: evaluation_configuration
-      dss_instances: dss_instances
+      dss_instances: dss_instances?
       utm_client_identity: utm_client_identity
       id_generator: id_generator
       service_area: service_area
