--- a/monitoring/uss_qualifier/suites/uspace/required_services.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/required_services.yaml
@@ -7,18 +7,18 @@ resources:
   invalid_flight_intents: resources.flight_planning.FlightIntentsResource
   invalid_flight_auth_flights: resources.flight_planning.FlightIntentsResource
   non_conflicting_flights: resources.flight_planning.FlightIntentsResource
-  flight_planners: resources.flight_planning.FlightPlannersResource
+  flight_planners: resources.flight_planning.FlightPlannersResource?
   mock_uss: resources.interuss.mock_uss.client.MockUSSResource?
   scd_dss: resources.astm.f3548.v21.DSSInstanceResource
   scd_dss_instances: resources.astm.f3548.v21.DSSInstancesResource?
 
   flights_data: resources.netrid.FlightDataResource
-  service_providers: resources.netrid.NetRIDServiceProviders
+  service_providers: resources.netrid.NetRIDServiceProviders?
   observers: resources.netrid.NetRIDObserversResource
   evaluation_configuration: resources.netrid.EvaluationConfigurationResource
-  netrid_dss_instances: resources.astm.f3411.DSSInstancesResource
+  netrid_dss_instances: resources.astm.f3411.DSSInstancesResource?
   utm_client_identity: resources.communications.ClientIdentityResource
-  second_utm_auth: resources.communications.AuthAdapterResource
+  second_utm_auth: resources.communications.AuthAdapterResource?
   id_generator: resources.interuss.IDGeneratorResource
   service_area: resources.netrid.ServiceAreaResource
   problematically_big_area: resources.VerticesResource
@@ -42,21 +42,21 @@ actions:
       invalid_flight_intents: invalid_flight_intents
       invalid_flight_auth_flights: invalid_flight_auth_flights
       non_conflicting_flights: non_conflicting_flights
-      flight_planners: flight_planners
+      flight_planners: flight_planners?
       mock_uss: mock_uss
       dss: scd_dss
       dss_instances: scd_dss_instances
       id_generator: id_generator
-      second_utm_auth: second_utm_auth
+      second_utm_auth: second_utm_auth?
   on_failure: Continue
 - test_suite:
     suite_type: suites.uspace.network_identification
     resources:
       flights_data: flights_data
-      service_providers: service_providers
+      service_providers: service_providers?
       observers: observers
       evaluation_configuration: evaluation_configuration
-      dss_instances: netrid_dss_instances
+      dss_instances: netrid_dss_instances?
       utm_client_identity: utm_client_identity
       id_generator: id_generator
       service_area: service_area
