--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -44,7 +44,7 @@ v1:
           mock_uss_instances: mock_uss_instances_scdsc
           locality: locality_che
 
-          version_providers: scd_version_providers
+          version_providers: scd_version_providers?
 
           conflicting_flights: che_conflicting_flights
           priority_preemption_flights: che_conflicting_flights
@@ -73,7 +73,7 @@ v1:
             test_suite:
               suite_type: suites.uspace.required_services
               resources:
-                version_providers: version_providers
+                version_providers: version_providers?
 
                 conflicting_flights: conflicting_flights
                 priority_preemption_flights: priority_preemption_flights
