--- a/monitoring/uss_qualifier/suites/uspace/required_services.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/required_services.yaml
@@ -1,6 +1,6 @@
 name: U-space required services
 resources:
-  version_providers: resources.versioning.VersionProvidersResource
+  version_providers: resources.versioning.VersionProvidersResource?
 
   conflicting_flights: resources.flight_planning.FlightIntentsResource
   priority_preemption_flights: resources.flight_planning.FlightIntentsResource
