[uss_qualifier] scd dss0015 ensure max subscription duration is enforced + required utils

--- a/monitoring/uss_qualifier/suites/uspace/required_services.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/required_services.yaml
@@ -21,6 +21,7 @@ resources:
   second_utm_auth: resources.communications.AuthAdapterResource?
   id_generator: resources.interuss.IDGeneratorResource
   service_area: resources.netrid.ServiceAreaResource
+  uss_area: resources.USSAreaResource
   problematically_big_area: resources.VerticesResource
 local_resources:
   system_identity:
@@ -48,6 +49,8 @@ actions:
       dss_instances: scd_dss_instances
       id_generator: id_generator
       second_utm_auth: second_utm_auth?
+      uss_area: uss_area
+      problematically_big_area: problematically_big_area
   on_failure: Continue
 - test_suite:
     suite_type: suites.uspace.network_identification
