--- a/monitoring/uss_qualifier/configurations/dev/message_signing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/message_signing.yaml
@@ -5,6 +5,8 @@ v1:
         che_conflicting_flights: {$ref: 'library/resources.yaml#/che_conflicting_flights'}
         che_invalid_flight_intents: {$ref: 'library/resources.yaml#/che_invalid_flight_intents'}
         che_non_conflicting_flights: {$ref: 'library/resources.yaml#/che_non_conflicting_flights'}
+        che_problematically_big_area: {$ref: 'library/resources.yaml#/che_problematically_big_area'}
+        che_uss_area: {$ref: 'library/resources.yaml#/che_uss_area'}
         combination_selector:
           resource_type: resources.flight_planning.FlightPlannerCombinationSelectorResource
           specification:
@@ -58,6 +60,8 @@ v1:
           dss_instances: scd_dss_instances
           id_generator: id_generator
           second_utm_auth: second_utm_auth
+          uss_area: che_uss_area
+          problematically_big_area: che_problematically_big_area
     execution:
       stop_fast: true
 
