--- a/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
@@ -5,7 +5,15 @@ resources:
   all_dss_instances: resources.astm.f3548.v21.DSSInstancesResource?
   flight_intents: resources.flight_planning.FlightIntentsResource
   id_generator: resources.interuss.IDGeneratorResource
+  uss_area: resources.USSAreaResource
+  problematically_big_area: resources.VerticesResource
 actions:
+  - test_scenario:
+      scenario_type: scenarios.astm.utm.dss.SubscriptionValidation
+      resources:
+        dss: dss
+        id_generator: id_generator
+        uss_area: uss_area
   - test_scenario:
       scenario_type: scenarios.astm.utm.OpIntentReferenceAccessControl
       resources:
