--- a/monitoring/uss_qualifier/suites/interuss/dss/all_tests.yaml
+++ b/monitoring/uss_qualifier/suites/interuss/dss/all_tests.yaml
@@ -8,6 +8,7 @@ resources:
   id_generator: resources.interuss.IDGeneratorResource
 
   service_area: resources.netrid.ServiceAreaResource?
+  uss_area: resources.USSAreaResource?
   problematically_big_area: resources.VerticesResource?
 
   second_utm_auth: resources.communications.AuthAdapterResource?
@@ -20,6 +21,8 @@ actions:
         second_utm_auth: second_utm_auth?
         flight_intents: flight_intents
         id_generator: id_generator
+        uss_area: uss_area
+        problematically_big_area: problematically_big_area
       specification:
         action_to_repeat:
           test_suite:
@@ -30,6 +33,8 @@ actions:
               all_dss_instances: dss_instances
               flight_intents: flight_intents
               id_generator: id_generator
+              uss_area: uss_area
+              problematically_big_area: problematically_big_area
           on_failure: Continue
         dss_instances_source: dss_instances
         dss_instance_id: dss
