--- a/monitoring/uss_qualifier/suites/faa/uft/message_signing.yaml
+++ b/monitoring/uss_qualifier/suites/faa/uft/message_signing.yaml
@@ -11,8 +11,7 @@ resources:
   invalid_flight_intents: resources.flight_planning.FlightIntentsResource
   id_generator: resources.interuss.IDGeneratorResource
   second_utm_auth: resources.communications.AuthAdapterResource?
-  problematically_big_area: resources.VerticesResource
-  uss_area: resources.USSAreaResource
+  planning_area: resources.astm.f3548.v21.PlanningAreaResource
 actions:
 - test_scenario:
     scenario_type: scenarios.faa.uft.StartMessageSigningReport
@@ -34,8 +33,7 @@ actions:
       dss_instances: dss_instances
       id_generator: id_generator
       second_utm_auth: second_utm_auth
-      uss_area: uss_area
-      problematically_big_area: problematically_big_area
+      planning_area: planning_area
   on_failure: Continue
 - test_scenario:
     scenario_type: scenarios.faa.uft.FinalizeMessageSigningReport
