--- a/monitoring/uss_qualifier/configurations/dev/dss_probing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/dss_probing.yaml
@@ -4,6 +4,7 @@ v1:
     resources:
       resource_declarations:
         kentland_service_area: { $ref: 'library/resources.yaml#/kentland_service_area' }
+        kentland_planning_area: { $ref: 'library/resources.yaml#/kentland_planning_area' }
         kentland_problematically_big_area: { $ref: 'library/resources.yaml#/kentland_problematically_big_area' }
 
         utm_auth: { $ref: 'library/environment.yaml#/utm_auth' }
@@ -30,6 +31,7 @@ v1:
           utm_client_identity: utm_client_identity
           id_generator: id_generator
           service_area: kentland_service_area
+          planning_area: kentland_planning_area
           problematically_big_area: kentland_problematically_big_area
           second_utm_auth: second_utm_auth
           flight_intents: che_non_conflicting_flights
