--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -8,6 +8,7 @@ v1:
         che_invalid_flight_intents: {$ref: 'library/resources.yaml#/che_invalid_flight_intents'}
         che_invalid_flight_auth_flights: {$ref: 'library/resources.yaml#/che_invalid_flight_auth_flights'}
         che_non_conflicting_flights: {$ref: 'library/resources.yaml#/che_non_conflicting_flights'}
+        che_planning_area: {$ref: 'library/resources.yaml#/che_planning_area'}
         foca_flights_data: {$ref: 'library/resources.yaml#/foca_flights_data'}
         netrid_observation_evaluation_configuration: {$ref: 'library/resources.yaml#/netrid_observation_evaluation_configuration'}
         utm_client_identity: {$ref: 'library/resources.yaml#/utm_client_identity'}
@@ -65,6 +66,7 @@ v1:
           second_utm_auth: second_utm_auth
           id_generator: id_generator
           service_area: kentland_service_area
+          planning_area: che_planning_area
           problematically_big_area: au_problematically_big_area
         specification:
           mock_uss_instances_source: mock_uss_instances
@@ -94,6 +96,7 @@ v1:
                 second_utm_auth: second_utm_auth
                 id_generator: id_generator
                 service_area: service_area
+                planning_area: planning_area
                 problematically_big_area: problematically_big_area
     execution:
       stop_fast: true
