--- a/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
@@ -22,6 +22,8 @@ v1:
           dss_instances: dss_instances
           mock_uss: mock_uss
           second_utm_auth: second_utm_auth
+          planning_area: planning_area
+          problematically_big_area: problematically_big_area
 
     # This block defines all the resources available in the resource pool.
     # Presumably all resources defined below would be used either
@@ -69,6 +71,47 @@ v1:
             environment_variable_containing_auth_spec: AUTH_SPEC_2
             scopes_authorized:
               - utm.strategic_coordination
+
+        # Area that will be used for queries and resource creation that are geo-located
+        planning_area:
+          $content_schema: monitoring/uss_qualifier/resources/definitions/ResourceDeclaration.json
+          resource_type: resources.astm.f3548.v21.PlanningAreaResource
+          specification:
+            base_url: https://uss_qualifier.test.utm/dummy_base_url
+            volume:
+              outline_polygon:
+                vertices:
+                  - lat: 37.1853
+                    lng: -80.6140
+                  - lat: 37.2148
+                    lng: -80.6140
+                  - lat: 37.2148
+                    lng: -80.5440
+                  - lat: 37.1853
+                    lng: -80.5440
+              altitude_lower:
+                value: 0
+                reference: W84
+                units: M
+              altitude_upper:
+                value: 3048
+                reference: W84
+                units: M
+
+        # An area designed to be soo big as to be refused by systems queries with it.
+        problematically_big_area:
+          $content_schema: monitoring/uss_qualifier/resources/definitions/ResourceDeclaration.json
+          resource_type: resources.VerticesResource
+          specification:
+            vertices:
+              - lat: 38
+                lng: -81
+              - lat: 37
+                lng: -81
+              - lat: 37
+                lng: -80
+              - lat: 38
+                lng: -80
 
         # Set of USSs capable of being tested as flight planners
         flight_planners:
