--- a/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
@@ -11,6 +11,7 @@ resources:
   dss_instances: resources.astm.f3548.v21.DSSInstancesResource?
   id_generator: resources.interuss.IDGeneratorResource
   second_utm_auth: resources.communications.AuthAdapterResource?
+  planning_area: resources.astm.f3548.v21.PlanningAreaResource
 actions:
 - test_suite:
     suite_type: suites.astm.utm.f3548_21
@@ -25,6 +26,7 @@ actions:
       dss_instances: dss_instances
       id_generator: id_generator
       second_utm_auth: second_utm_auth
+      planning_area: planning_area
   on_failure: Continue
 - test_scenario:
     scenario_type: scenarios.flight_planning.PrepareFlightPlanners
