--- a/monitoring/uss_qualifier/suites/uspace/required_services.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/required_services.yaml
@@ -21,7 +21,7 @@ resources:
   second_utm_auth: resources.communications.AuthAdapterResource?
   id_generator: resources.interuss.IDGeneratorResource
   service_area: resources.netrid.ServiceAreaResource
-  problematically_big_area: resources.VerticesResource
+  planning_area: resources.astm.f3548.v21.PlanningAreaResource
 local_resources:
   system_identity:
     resource_type: resources.versioning.SystemIdentityResource
@@ -48,6 +48,7 @@ actions:
       dss_instances: scd_dss_instances
       id_generator: id_generator
       second_utm_auth: second_utm_auth?
+      planning_area: planning_area
   on_failure: Continue
 - test_suite:
     suite_type: suites.uspace.network_identification
