[uss_qualifier] properly check dss availability

--- a/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
@@ -25,3 +25,4 @@ actions:
       resources:
         primary_dss_instance: dss
         all_dss_instances: all_dss_instances
+        planning_area: planning_area
