Fix U-space configuration

--- a/monitoring/uss_qualifier/suites/uspace/required_services.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/required_services.yaml
@@ -31,7 +31,7 @@ actions:
 - test_scenario:
     scenario_type: scenarios.versioning.GetSystemVersions
     resources:
-      test_env_version_providers: test_env_version_providers
+      version_providers: test_env_version_providers
       system_identity: system_identity
     on_failure: Continue
 - test_suite:
