--- a/monitoring/uss_qualifier/suites/astm/utm/f3548_21.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/f3548_21.yaml
@@ -14,6 +14,7 @@ resources:
   mock_uss: resources.interuss.mock_uss.client.MockUSSResource?
   id_generator: resources.interuss.IDGeneratorResource
   planning_area: resources.astm.f3548.v21.PlanningAreaResource
+  problematically_big_area: resources.VerticesResource
   system_identity: resources.versioning.SystemIdentityResource?
 local_resources:
   system_identity:
@@ -46,6 +47,7 @@ actions:
       flight_intents: non_conflicting_flights
       id_generator: id_generator
       planning_area: planning_area
+      problematically_big_area: problematically_big_area
     specification:
       action_to_repeat:
         test_suite:
@@ -57,6 +59,7 @@ actions:
             flight_intents: flight_intents
             id_generator: id_generator
             planning_area: planning_area
+            problematically_big_area: problematically_big_area
         on_failure: Continue
       dss_instances_source: dss_instances
       dss_instance_id: dss
