--- a/monitoring/uss_qualifier/configurations/dev/message_signing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/message_signing.yaml
@@ -61,6 +61,7 @@ v1:
           id_generator: id_generator
           second_utm_auth: second_utm_auth
           planning_area: che_planning_area
+          problematically_big_area: che_problematically_big_area
     execution:
       stop_fast: true
 
