--- a/monitoring/uss_qualifier/suites/faa/uft/message_signing.yaml
+++ b/monitoring/uss_qualifier/suites/faa/uft/message_signing.yaml
@@ -12,6 +12,7 @@ resources:
   id_generator: resources.interuss.IDGeneratorResource
   second_utm_auth: resources.communications.AuthAdapterResource?
   planning_area: resources.astm.f3548.v21.PlanningAreaResource
+  problematically_big_area: resources.VerticesResource
 actions:
 - test_scenario:
     scenario_type: scenarios.faa.uft.StartMessageSigningReport
@@ -34,6 +35,7 @@ actions:
       id_generator: id_generator
       second_utm_auth: second_utm_auth
       planning_area: planning_area
+      problematically_big_area: problematically_big_area
   on_failure: Continue
 - test_scenario:
     scenario_type: scenarios.faa.uft.FinalizeMessageSigningReport
