--- a/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
@@ -13,6 +13,7 @@ resources:
   id_generator: resources.interuss.IDGeneratorResource
   second_utm_auth: resources.communications.AuthAdapterResource?
   planning_area: resources.astm.f3548.v21.PlanningAreaResource
+  problematically_big_area: resources.VerticesResource
   system_identity: resources.versioning.SystemIdentityResource?
 actions:
 - test_suite:
@@ -30,6 +31,7 @@ actions:
       id_generator: id_generator
       second_utm_auth: second_utm_auth
       planning_area: planning_area
+      problematically_big_area: problematically_big_area
       system_identity: system_identity?
   on_failure: Continue
 - test_scenario:
