--- a/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
@@ -10,6 +10,12 @@ resources:
   problematically_big_area: resources.VerticesResource
 actions:
   - test_scenario:
+      scenario_type: scenarios.astm.utm.dss.authentication.AuthenticationValidation
+      resources:
+        dss: dss
+        id_generator: id_generator
+        planning_area: planning_area
+  - test_scenario:
       scenario_type: scenarios.astm.utm.dss.SubscriptionSimple
       resources:
         dss: dss
