[uss_qualifier/utm/dss] Add CockroachDBAccess scenario for testing DSS0200+DSS0205

--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ lxml==4.9.1
 marko==1.2.2  # uss_qualifier
 numpy==1.24.4
 pem==21.2.0  # deployment_manager
+psycopg[binary]==3.1.18  # PostgreSQL/CockroachDB lib
 pvlib==0.10.1
 pyjwt==2.4.0
 pykml==0.2.0
