--- a/monitoring/uss_qualifier/configurations/dev/dss_probing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/dss_probing.yaml
@@ -54,4 +54,12 @@ v1:
           uss1: all_astm_dss_requirements
           uss2: all_astm_dss_requirements
   validation:
-    $ref: ./library/validation.yaml#/normal_test
+    criteria:
+      - $ref: ./library/validation.yaml#/execution_error_none
+      - $ref: ./library/validation.yaml#/failed_check_severity_max_low
+      - applicability:
+          skipped_actions: {}
+        pass_condition:
+          elements:
+            count:
+              equal_to: 6 # 6 CRDBAccess scenarios are skipped
