--- a/monitoring/uss_qualifier/configurations/dev/netrid_v19.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/netrid_v19.yaml
@@ -54,4 +54,12 @@ v1:
           uss2: sp_dss
     sequence_view: {}
   validation:
-    $ref: ./library/validation.yaml#/normal_test
+    criteria:
+      - $ref: ./library/validation.yaml#/execution_error_none
+      - $ref: ./library/validation.yaml#/failed_check_severity_max_low
+      - applicability:
+          skipped_actions: {}
+        pass_condition:
+          elements:
+            count:
+              equal_to: 2 # 2 CRDBAccess scenarios are skipped
