--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a/dss_probing.yaml
@@ -2,6 +2,7 @@ name: DSS testing for ASTM NetRID F3411-22a
 resources:
   dss: resources.astm.f3411.DSSInstanceResource
   all_dss_instances: resources.astm.f3411.DSSInstancesResource?
+  dss_crdb_cluster: resources.interuss.crdb.CockroachDBClusterResource?
   id_generator: resources.interuss.IDGeneratorResource
   utm_client_identity: resources.communications.ClientIdentityResource
   isa: resources.netrid.ServiceAreaResource
@@ -60,7 +61,7 @@ actions:
         isa: isa
   - test_scenario:
       scenario_type: scenarios.astm.netrid.v22a.dss.CRDBAccess
-      resources: {}
+      crdb_cluster: dss_crdb_cluster
       on_failure: Continue
   - test_scenario:
       scenario_type: scenarios.astm.netrid.v22a.dss.HeavyTrafficConcurrent
