--- a/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
@@ -3,6 +3,7 @@ resources:
   dss: resources.astm.f3548.v21.DSSInstanceResource
   second_utm_auth: resources.communications.AuthAdapterResource?
   all_dss_instances: resources.astm.f3548.v21.DSSInstancesResource?
+  dss_crdb_cluster: resources.interuss.crdb.CockroachDBClusterResource?
   flight_intents: resources.flight_planning.FlightIntentsResource
   id_generator: resources.interuss.IDGeneratorResource
   planning_area: resources.astm.f3548.v21.PlanningAreaResource
@@ -34,3 +35,8 @@ actions:
         primary_dss_instance: dss
         all_dss_instances: all_dss_instances
         planning_area: planning_area
+  - test_scenario:
+      scenario_type: scenarios.astm.utm.dss.CRDBAccess
+      resources:
+        crdb_cluster: dss_crdb_cluster
+    on_failure: Continue
