--- a/monitoring/uss_qualifier/suites/faa/uft/message_signing.yaml
+++ b/monitoring/uss_qualifier/suites/faa/uft/message_signing.yaml
@@ -5,6 +5,7 @@ resources:
   combination_selector: resources.flight_planning.FlightPlannerCombinationSelectorResource
   dss: resources.astm.f3548.v21.DSSInstanceResource
   dss_instances: resources.astm.f3548.v21.DSSInstancesResource?
+  dss_crdb_cluster: resources.interuss.crdb.CockroachDBClusterResource?
   conflicting_flights: resources.flight_planning.FlightIntentsResource
   non_conflicting_flights: resources.flight_planning.FlightIntentsResource
   priority_preemption_flights: resources.flight_planning.FlightIntentsResource
@@ -32,6 +33,7 @@ actions:
       priority_planning_selector: combination_selector
       dss: dss
       dss_instances: dss_instances
+      dss_crdb_cluster: dss_crdb_cluster?
       id_generator: id_generator
       second_utm_auth: second_utm_auth
       planning_area: planning_area
