--- a/monitoring/uss_qualifier/suites/interuss/dss/all_tests.yaml
+++ b/monitoring/uss_qualifier/suites/interuss/dss/all_tests.yaml
@@ -3,6 +3,7 @@ resources:
   f3411v19_dss_instances: resources.astm.f3411.DSSInstancesResource?
   f3411v22a_dss_instances: resources.astm.f3411.DSSInstancesResource?
   f3548v21_dss_instances: resources.astm.f3548.v21.dss.DSSInstancesResource?
+  dss_crdb_cluster: resources.interuss.crdb.CockroachDBClusterResource?
 
   utm_client_identity: resources.communications.ClientIdentityResource
   id_generator: resources.interuss.IDGeneratorResource
@@ -18,6 +19,7 @@ actions:
       generator_type: action_generators.astm.f3548.ForEachDSS
       resources:
         dss_instances: f3548v21_dss_instances
+        dss_crdb_cluster: dss_crdb_cluster?
         second_utm_auth: second_utm_auth?
         flight_intents: flight_intents
         id_generator: id_generator
@@ -31,6 +33,7 @@ actions:
               dss: dss
               second_utm_auth: second_utm_auth?
               all_dss_instances: dss_instances
+              dss_crdb_cluster: dss_crdb_cluster?
               flight_intents: flight_intents
               id_generator: id_generator
               planning_area: planning_area
@@ -43,6 +46,7 @@ actions:
       generator_type: action_generators.astm.f3411.ForEachDSS
       resources:
         dss_instances: f3411v19_dss_instances
+        dss_crdb_cluster: dss_crdb_cluster?
         utm_client_identity: utm_client_identity
         id_generator: id_generator
         service_area: service_area
@@ -54,6 +58,7 @@ actions:
             resources:
               dss: dss
               all_dss_instances: dss_instances
+              dss_crdb_cluster: dss_crdb_cluster?
               utm_client_identity: utm_client_identity
               id_generator: id_generator
               isa: service_area
@@ -66,6 +71,7 @@ actions:
       generator_type: action_generators.astm.f3411.ForEachDSS
       resources:
         dss_instances: f3411v22a_dss_instances
+        dss_crdb_cluster: dss_crdb_cluster?
         utm_client_identity: utm_client_identity
         id_generator: id_generator
         service_area: service_area
@@ -77,6 +83,7 @@ actions:
             resources:
               dss: dss
               all_dss_instances: dss_instances
+              dss_crdb_cluster: dss_crdb_cluster?
               utm_client_identity: utm_client_identity
               id_generator: id_generator
               isa: service_area
