--- a/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
@@ -18,6 +18,14 @@ actions:
         client_identity: utm_client_identity
         planning_area: planning_area
   - test_scenario:
+      scenario_type: scenarios.astm.utm.dss.synchronization.OIRSynchronization
+      resources:
+        dss: dss
+        other_instances: all_dss_instances
+        id_generator: id_generator
+        planning_area: planning_area
+        client_identity: utm_client_identity
+  - test_scenario:
       scenario_type: scenarios.astm.utm.dss.authentication.AuthenticationValidation
       resources:
         dss: dss
