--- a/monitoring/uss_qualifier/suites/interuss/dss/all_tests.yaml
+++ b/monitoring/uss_qualifier/suites/interuss/dss/all_tests.yaml
@@ -21,6 +21,7 @@ actions:
         dss_instances: f3548v21_dss_instances
         dss_crdb_cluster: dss_crdb_cluster?
         second_utm_auth: second_utm_auth?
+        utm_client_identity: utm_client_identity
         flight_intents: flight_intents
         id_generator: id_generator
         utm_client_identity: utm_client_identity
@@ -33,6 +34,7 @@ actions:
             resources:
               dss: dss
               second_utm_auth: second_utm_auth?
+              utm_client_identity: utm_client_identity
               all_dss_instances: dss_instances
               dss_crdb_cluster: dss_crdb_cluster?
               flight_intents: flight_intents
