--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
@@ -31,6 +31,7 @@ actions:
               utm_client_identity: utm_client_identity
               id_generator: id_generator
               isa: service_area
+              client_identity: utm_client_identity
               problematically_big_area: problematically_big_area
           on_failure: Continue
         dss_instances_source: dss_instances
