--- a/monitoring/uss_qualifier/suites/faa/uft/message_signing.yaml
+++ b/monitoring/uss_qualifier/suites/faa/uft/message_signing.yaml
@@ -13,6 +13,7 @@ resources:
   id_generator: resources.interuss.IDGeneratorResource
   utm_client_identity: resources.communications.ClientIdentityResource
   second_utm_auth: resources.communications.AuthAdapterResource?
+  utm_client_identity: resources.communications.ClientIdentityResource
   planning_area: resources.astm.f3548.v21.PlanningAreaResource
   problematically_big_area: resources.VerticesResource
 actions:
@@ -38,6 +39,7 @@ actions:
       id_generator: id_generator
       utm_client_identity: utm_client_identity
       second_utm_auth: second_utm_auth
+      utm_client_identity: utm_client_identity
       planning_area: planning_area
       problematically_big_area: problematically_big_area
   on_failure: Continue
