--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -20,7 +20,8 @@ v1:
         second_utm_auth: {$ref: 'library/environment.yaml#/second_utm_auth'}
         mock_uss_instances_scdsc: {$ref: 'library/environment.yaml#/mock_uss_instances_scdsc'}
         mock_uss_instance_uss6: {$ref: 'library/environment.yaml#/mock_uss_instance_uss6'}
-        scd_version_providers: {$ref: 'library/environment.yaml#/scd_version_providers'}
+        test_env_version_providers: {$ref: 'library/environment.yaml#/scd_version_providers'}
+        prod_env_version_providers: {$ref: 'library/environment.yaml#/scd_version_providers'}
         all_flight_planners: {$ref: 'library/environment.yaml#/all_flight_planners'}
         scd_dss: {$ref: 'library/environment.yaml#/scd_dss'}
         scd_dss_instances: {$ref: 'library/environment.yaml#/scd_dss_instances'}
@@ -31,7 +32,8 @@ v1:
       - v1.test_run.resources.resource_declarations.utm_auth
       - v1.test_run.resources.resource_declarations.mock_uss_instances_scdsc
       - v1.test_run.resources.resource_declarations.mock_uss_instance_uss6
-      - v1.test_run.resources.resource_declarations.scd_version_providers
+      - v1.test_run.resources.resource_declarations.test_env_version_providers
+      - v1.test_run.resources.resource_declarations.prod_env_version_providers
       - v1.test_run.resources.resource_declarations.all_flight_planners
       - v1.test_run.resources.resource_declarations.scd_dss
       - v1.test_run.resources.resource_declarations.scd_dss_instances
@@ -45,7 +47,8 @@ v1:
           mock_uss_instances: mock_uss_instances_scdsc
           locality: locality_che
 
-          test_env_version_providers: scd_version_providers?
+          test_env_version_providers: test_env_version_providers?
+          prod_env_version_providers: prod_env_version_providers?
 
           conflicting_flights: che_conflicting_flights
           priority_preemption_flights: che_conflicting_flights
@@ -76,6 +79,7 @@ v1:
               suite_type: suites.uspace.required_services
               resources:
                 test_env_version_providers: test_env_version_providers?
+                prod_env_version_providers: prod_env_version_providers?
 
                 conflicting_flights: conflicting_flights
                 priority_preemption_flights: priority_preemption_flights
