--- a/monitoring/uss_qualifier/test_data/flight_intents/standard/non_conflicting.yaml
+++ b/monitoring/uss_qualifier/test_data/flight_intents/standard/non_conflicting.yaml
@@ -68,3 +68,35 @@ intents:
 
       uspace_flight_authorisation:
         $ref: ./flight_auths.yaml#/standard
+
+  flight_1_planned:
+    delta:
+      source: flight_1
+      mutation:
+        basic_information:
+          area:
+            - start_time:
+                offset_from:
+                  starting_from:
+                    time_during_test: TimeOfEvaluation
+
+
+  flight_1_activated:
+    delta:
+      source: flight_1_planned
+      mutation:
+        basic_information:
+          usage_state: InUse
+
+
+  flight_2_planned:
+    delta:
+      source: flight_2
+      mutation:
+        basic_information:
+          area:
+            - start_time:
+                offset_from:
+                  starting_from:
+                    time_during_test: TimeOfEvaluation
+
