--- a/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
@@ -1,6 +1,7 @@
 name: U-space flight authorisation
 resources:
   test_env_version_providers: resources.versioning.VersionProvidersResource?
+  prod_env_version_providers: resources.versioning.VersionProvidersResource?
   conflicting_flights: resources.flight_planning.FlightIntentsResource
   priority_preemption_flights: resources.flight_planning.FlightIntentsResource
   invalid_flight_auth_flights: resources.flight_planning.FlightIntentsResource
@@ -21,6 +22,7 @@ actions:
     suite_type: suites.astm.utm.f3548_21
     resources:
       test_env_version_providers: test_env_version_providers?
+      prod_env_version_providers: prod_env_version_providers?
       conflicting_flights: conflicting_flights
       priority_preemption_flights: priority_preemption_flights
       invalid_flight_intents: invalid_flight_intents
