DSS0210 OIR Awareness (key must be correct)

--- a/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
@@ -14,6 +14,7 @@ v1:
         # Mapping of <resource name in test suite> to <resource name in resource pool>
         resources:
           id_generator: id_generator
+          utm_client_identity: utm_client_identity
           test_env_version_providers: test_env_version_providers
           prod_env_version_providers: prod_env_version_providers
           flight_planners: flight_planners
