--- a/monitoring/uss_qualifier/configurations/dev/message_signing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/message_signing.yaml
@@ -59,6 +59,7 @@ v1:
           dss: scd_dss
           dss_instances: scd_dss_instances
           id_generator: id_generator
+          utm_client_identity: utm_client_identity
           second_utm_auth: second_utm_auth
           planning_area: che_planning_area
           problematically_big_area: che_problematically_big_area
