--- a/monitoring/uss_qualifier/suites/faa/uft/message_signing.yaml
+++ b/monitoring/uss_qualifier/suites/faa/uft/message_signing.yaml
@@ -11,6 +11,7 @@ resources:
   priority_preemption_flights: resources.flight_planning.FlightIntentsResource
   invalid_flight_intents: resources.flight_planning.FlightIntentsResource
   id_generator: resources.interuss.IDGeneratorResource
+  utm_client_identity: resources.communications.ClientIdentityResource
   second_utm_auth: resources.communications.AuthAdapterResource?
   planning_area: resources.astm.f3548.v21.PlanningAreaResource
   problematically_big_area: resources.VerticesResource
@@ -35,6 +36,7 @@ actions:
       dss_instances: dss_instances
       dss_crdb_cluster: dss_crdb_cluster?
       id_generator: id_generator
+      utm_client_identity: utm_client_identity
       second_utm_auth: second_utm_auth
       planning_area: planning_area
       problematically_big_area: problematically_big_area
