--- a/monitoring/uss_qualifier/suites/interuss/dss/all_tests.yaml
+++ b/monitoring/uss_qualifier/suites/interuss/dss/all_tests.yaml
@@ -23,6 +23,7 @@ actions:
         second_utm_auth: second_utm_auth?
         flight_intents: flight_intents
         id_generator: id_generator
+        utm_client_identity: utm_client_identity
         planning_area: planning_area
         problematically_big_area: problematically_big_area
       specification:
@@ -36,6 +37,7 @@ actions:
               dss_crdb_cluster: dss_crdb_cluster?
               flight_intents: flight_intents
               id_generator: id_generator
+              utm_client_identity: utm_client_identity
               planning_area: planning_area
               problematically_big_area: problematically_big_area
           on_failure: Continue
