--- a/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
@@ -13,6 +13,7 @@ resources:
   dss_instances: resources.astm.f3548.v21.DSSInstancesResource?
   dss_crdb_cluster: resources.interuss.crdb.CockroachDBClusterResource?
   id_generator: resources.interuss.IDGeneratorResource
+  utm_client_identity: resources.communications.ClientIdentityResource
   second_utm_auth: resources.communications.AuthAdapterResource?
   planning_area: resources.astm.f3548.v21.PlanningAreaResource
   problematically_big_area: resources.VerticesResource
@@ -33,6 +34,7 @@ actions:
       dss_instances: dss_instances
       dss_crdb_cluster: dss_crdb_cluster?
       id_generator: id_generator
+      utm_client_identity: utm_client_identity
       second_utm_auth: second_utm_auth
       planning_area: planning_area
       problematically_big_area: problematically_big_area
