DSS0210 prepare sub interactions scenario: oir creation

--- a/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
@@ -28,6 +28,7 @@ v1:
           utm_client_identity: utm_client_identity
           planning_area: planning_area
           problematically_big_area: problematically_big_area
+          utm_client_identity: utm_client_identity
 
     # This block defines all the resources available in the resource pool.
     # Presumably all resources defined below would be used either
