--- a/monitoring/uss_qualifier/suites/astm/utm/f3548_21.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/f3548_21.yaml
@@ -20,6 +20,7 @@ resources:
   planning_area: resources.astm.f3548.v21.PlanningAreaResource
   problematically_big_area: resources.VerticesResource
   system_identity: resources.versioning.SystemIdentityResource?
+  utm_client_identity: resources.communications.ClientIdentityResource
 local_resources:
   system_identity:
     resource_type: resources.versioning.SystemIdentityResource
@@ -55,6 +56,7 @@ actions:
       utm_client_identity: utm_client_identity
       planning_area: planning_area
       problematically_big_area: problematically_big_area
+      utm_client_identity: utm_client_identity
     specification:
       action_to_repeat:
         test_suite:
@@ -70,6 +72,7 @@ actions:
             utm_client_identity: utm_client_identity
             planning_area: planning_area
             problematically_big_area: problematically_big_area
+            utm_client_identity: utm_client_identity
         on_failure: Continue
       dss_instances_source: dss_instances
       dss_instance_id: dss
