[uss_qualidier] move dss-specific test scenarios to the dss subdirectory

--- a/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
@@ -29,14 +29,14 @@ actions:
         id_generator: id_generator
         planning_area: planning_area
   - test_scenario:
-      scenario_type: scenarios.astm.utm.OpIntentReferenceAccessControl
+      scenario_type: scenarios.astm.utm.dss.OpIntentReferenceAccessControl
       resources:
         dss: dss
         second_utm_auth: second_utm_auth
         flight_intents: flight_intents
         id_generator: id_generator
   - test_scenario:
-      scenario_type: scenarios.astm.utm.DSSInteroperability
+      scenario_type: scenarios.astm.utm.dss.DSSInteroperability
       resources:
         primary_dss_instance: dss
         all_dss_instances: all_dss_instances
