[uss_qualifier/scenarios/utm/receive_notifications_for_awareness] Add modification while activated case

--- a/monitoring/uss_qualifier/test_data/flight_intents/standard/non_conflicting.yaml
+++ b/monitoring/uss_qualifier/test_data/flight_intents/standard/non_conflicting.yaml
@@ -100,3 +100,11 @@ intents:
                   starting_from:
                     time_during_test: TimeOfEvaluation
 
+  flight_2_planned_modified:
+    delta:
+      source: flight_2_planned
+      mutation:
+        basic_information:
+          area:
+            - altitude_upper:
+                value: 65
