[uss_qualifier/scenarios/utm/dss/subscription_interactions] Add test of requirement DSS0210,A2-7-2,5a-b-c

--- a/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
@@ -11,6 +11,14 @@ resources:
   problematically_big_area: resources.VerticesResource
 actions:
   - test_scenario:
+      scenario_type: scenarios.astm.utm.dss.SubscriptionInteractionsDeletion
+      resources:
+        dss: dss
+        other_instances: all_dss_instances
+        id_generator: id_generator
+        planning_area: planning_area
+        utm_client_identity: utm_client_identity
+  - test_scenario:
       scenario_type: scenarios.astm.utm.dss.SubscriptionInteractions
       resources:
         dss: dss
@@ -77,7 +85,6 @@ actions:
       scenario_type: scenarios.astm.utm.dss.CRDBAccess
       resources:
         crdb_cluster: dss_crdb_cluster
-    on_failure: Continue
   - test_scenario:
       scenario_type: scenarios.astm.utm.dss.Report
       resources:
