--- a/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
@@ -41,7 +41,7 @@ actions:
       system_identity: system_identity?
   on_failure: Continue
 - test_scenario:
-    scenario_type: scenarios.flight_planning.PrepareFlightPlannersScenario
+    scenario_type: scenarios.flight_planning.PrepareFlightPlanners
     resources:
       flight_planners: flight_planners
       flight_intents: invalid_flight_auth_flights
